# PeopleInfoExtraction

./: .gitignore  .python-version  README.md  README_VALIDATION.md  pyproject.toml
@docs/: POC_PLAN.md  VERIFIER_DROP_AUDIT.md
docs/: PEOPLE_GRAPH_PROMPT_PLAN.md  SYSTEM_DESIGN.md  WORKFLOW_B_PLAN.md  gemini_flash_validator_plan.md  validation_guide.md
scripts/: __init__.py  fetch_thanhnien_category.py  summarize_manual_status.py  test_gemini_validator_demo.py  test_validator_demo.py  view_gemini_report.py  workflow_b_fast_pass1.py  workflow_b_gemini_validator.py  workflow_b_validator.py
src/: __init__.py  config.py
src/extraction/: __init__.py  ner.py  passages.py  regex_detectors.py  run_baseline.py  run_verifier.py  spans.py  verifier.py
src/ingestion/: __init__.py  article_loader.py  articles.py  timeline.py
src/llm/: __init__.py  ollama.py  openrouter.py  types.py  vllm.py
src/utils/: http.py
src/validation/: __init__.py  gemini_validator.py  llm_validator.py  models.py
tests/: test_gemini_validator.py  test_ner.py  test_regex_detectors.py  test_run_baseline.py  test_spans.py  test_verifier.py
